// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextAnt should render a text input by default 1`] = `
<Input
  data-testid="the_id"
  disabled={false}
  id="the_id"
  label="oh"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  readOnly={false}
  type="text"
  value=""
/>
`;

exports[`TextAnt should render a textarea with the control option set 1`] = `
<TextArea
  data-testid="the_id"
  disabled={false}
  id="the_id"
  label="oh"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  readOnly={false}
  value=""
/>
`;

exports[`TextFormAnt should render form item with a text input by default 1`] = `
<FormItemAnt
  operation="bound TextImpl"
>
  <TextAnt
    disabled={false}
    id="the_id"
    operation="bound TextImpl"
    readOnly={false}
  />
</FormItemAnt>
`;

exports[`TextSearchAnt should render search text input by default 1`] = `
<div
  style={
    Object {
      "marginBottom": "1.5em",
      "position": "relative",
    }
  }
>
  <Search
    disabled={false}
    enterButton="Search"
    id="the_id"
    label="oh"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onSearch={[Function]}
    readOnly={false}
    style={
      Object {
        "marginBottom": "0",
      }
    }
    value=""
  />
</div>
`;
